--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -37,18 +37,20 @@ jobs:
         path: ./*
         remote_path: "${{ secrets.VPS_FOLDER }}"
         remote_host: "${{ secrets.VPS_HOST }}"
-        remote_user: ansofa
+        remote_user: root
         remote_key: "${{ secrets.SSH_PRIVATE_KEY }}"
 
     - name: SSH into VPS and run commands
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.VPS_HOST }}
-        username: ansofa
+        username: root
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           cd ${{ secrets.VPS_FOLDER }}
-          git pull
+          git pull origin main
+          export NVM_DIR=~/.nvm
+          source ~/.nvm/nvm.sh
           npm install
           npm run build
           sudo pm2 delete tkpd-frontend
